added banner section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,34 @@
 
 <body>
 
-    <h1>Tea House</h1>
+    <!-- banner section  -->
+    <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto mt-10 border border-gray-400">
+        <div class="banner-left space-y-[30px]">
+            <h1 class="font-extrabold text-[80px]">It's good <br>
+                tea time at The <br> Tea House</h1>
+            <p class="text-[18px] font-medium text-[#777]">Tea and Botanical Solutions Supplier Give Optimum
+                Satisfaction To Your Taste
+                Buds.</p>
+            <button
+                class="flext items-center py-3 px-5 bg-linear-to-r from-[#ff8938] to-[#f00] rounded-md text-white font-bold text-[20px] border-0">Explore
+                More
+                <span class="-rotate-45 inline-block text-white">
+                    <i class="fa-solid fa-arrow-right"></i>
+                </span></button>
+        </div>
+        <div class="banner-right flex items-center justify-end relative">
+            <img src="./images/banner.png" alt="banner-cup">
+            <!-- rating -->
+            <div
+                class="flex justify-center items-center gap-1.5 absolute bottom-[60px] left-24 px-2.5 py-2 bg-white rounded-[10px] shadow-[0_7px_5_0_rgba(0,0,0,0.06)]">
+                <img src="./images/star.png" alt="star">
+                <div>
+                    <h2 class="font-extrabold text-3xl">5.00</h2>
+                    <p class="font-semibold text-[#777]">Trust Pilot Ratings</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
