--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </style>
 </head>
 
-<body>
+<body class="space-y-[50px]">
 
     <!-- banner section  -->
-    <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto mt-10 border border-gray-400">
+    <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto mt-10 ">
         <div class="banner-left space-y-[30px]">
             <h1 class="font-extrabold text-[80px]">It's good <br>
                 tea time at The <br> Tea House</h1>
@@ -56,6 +56,46 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- feature products section -->
+    <section class="container  mx-auto space-y-[30px] ">
+        <section class="header text-center space-y-1">
+            <h2 class="font-extrabold text-[45px]">Our Featured Products</h2>
+            <p class="w-[70%] text-center mx-auto font-medium text-[#777]">There are many variations of passages of
+                Lorem Ipsum available, but
+                the
+                majority have
+                suffered alteration
+                in some form,
+                by injected humour, or randomised words which don't look even slightly believable.</p>
+        </section>
+        <section class="cards grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 text-center">
+            <div
+                class="card flex flex-col justify-center items-center bg-linear-to-b from-[#f4f4f4] to-[rgba(244,244,244,)0] p-4 rounded-[10px]">
+                <img src="./images/tea-1.png" alt="" class="mb-5">
+                <h3 class="font-extrabold text-2xl mb-1.5">Milk Tea</h3>
+                <p class="font-semibold text-[#777] text-center">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div
+                class="card flex flex-col justify-center items-center bg-linear-to-b from-[#f4f4f4] to-[rgba(244,244,244,)0] p-4 rounded-[10px]">
+                <img src="./images/tea-2.png" alt="" class="mb-5">
+                <h3 class="font-extrabold text-2xl mb-1.5">Black Tea</h3>
+                <p class="font-semibold text-[#777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div
+                class="card flex flex-col justify-center items-center bg-linear-to-b from-[#f4f4f4] to-[rgba(244,244,244,)0] p-4 rounded-[10px]">
+                <img src="./images/tea-3.png" alt="" class="mb-5">
+                <h3 class="font-extrabold text-2xl mb-1.5">Lemon Tea</h3>
+                <p class="font-semibold text-[#777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div
+                class="card flex flex-col justify-center items-center bg-linear-to-b from-[#f4f4f4] to-[rgba(244,244,244,)0] p-4 rounded-[10px]">
+                <img src="./images/tea-4.png" alt="" class="mb-5">
+                <h3 class="font-extrabold text-2xl mb-1.5">Green Tea</h3>
+                <p class="font-semibold text-[#777]">Creamer could be replaced by fresh milk</p>
+            </div>
+        </section>
     </section>
 
 </body>
