--- a/index.html
+++ b/index.html
@@ -98,6 +98,41 @@
         </section>
     </section>
 
+    <!-- green tea section  -->
+
+    <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-10">
+        <section class="green-tea-left grid grid-cols-2 gap-5 grid-rows-3">
+            <div class="rounded-md bg-linear-to-r from-[#f00] to-[#ff8938] opacity-[0.1]">
+            </div>
+            <div class=" row-span-2 rounded-md bg-[rgba(230,166,35,0.1)] flex items-center justify-center">
+                <img src="./images/fresh-1.png" alt="fresh-tea">
+            </div>
+            <div class=" row-span-2 rounded-md bg-[rgba(87,118,57,0.1)] flex items-center justify-center">
+                <img src="./images/fresh-2.png" alt="fresh-tea2">
+            </div>
+            <div class=" rounded-md bg-linear-to-r from-[#d9d9d9] to-[rgba(255,255,255)]"></div>
+        </section>
+        <section class="green-tea-right space-y-3.5 pr-4">
+            <h2 class="font-extrabold text-5xl">Great Tea, Freshly Presented</h2>
+            <p class="font-medium text-[#777]">The meaning of gong cha is chanese is to provide the best tea
+                to emperor
+                from all possessions . It
+                represents the
+                highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its
+                custoers because
+                of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h4 class="font-extrabold text-[20px]">Unique Taste</h4>
+            <p class="font-medium text-[#777] ">A Unique and different style from other teapots gives a
+                luxurious and
+                minimalist impression</p>
+            <h4 class="font-extrabold text-[20px]">Premium Quality</h4>
+            <p class="font-medium text-[#777] ">Premium Quality that makes tea more elegant and more durable
+                when you use
+                it.</p>
+        </section>
+
+    </section>
+
 </body>
 
 </html>
