--- a/index.html
+++ b/index.html
@@ -133,6 +133,92 @@
 
     </section>
 
+    <!-- clients section  -->
+    <section
+        class="container mx-auto bg-linear-to-r from-[#ff8938] to-[#f00] rounded-md max-sm:p-4 p-[70px] grid lg:grid-cols-2 space-y-[50px]">
+        <section class="clients-left flex items-center">
+            <div class="space-y-3.5">
+                <h2 class="font-extrabold text-[45px] text-[#f4f4f4]">Meet Our Super Clients</h2>
+                <p class="font-medium text-[#f4f4f4]">There are many variations of passages of Lorem Ipsum available,
+                    but
+                    the majority have suffered
+                    alteration in some form,
+                    by injected humour, or randomised words which don't look even slightly believable.</p>
+                <button class="bg-white px-4 py-3 font-bold text-[20px] rounded-md"><span
+                        class="bg-linear-to-r from-[#ff8938] to-[#f00] bg-clip-text text-transparent ">Show
+                        All</span></button>
+            </div>
+        </section>
+        <section class="clients-right flex justify-between items-center flex-col relative pl-[100px]">
+
+            <!-- client section caerd -->
+            <div class="flex bg-white rounded-md p-5 pl-9 w-[433px] h-[233px] relative mb-[50px] opacity-[.4]">
+                <div class="flex items-center">
+                    <div>
+                        <p class="text-[#777] mb-5">We are providing the best and suitable home insurance services for
+                            the
+                            people
+                            who are interested
+                            to treatment</p>
+                        <h5 class="font-bold mb-2">
+                            Ilham Yuda
+                        </h5>
+                        <p class="text-[#5d5a6f] font-medium">Businessman</p>
+                    </div>
+                </div>
+                <img src="./images/flowers.png" alt="flowers" class="h-5 self-end">
+                <div
+                    class="circle-pic w-[60px] h-[60px] rounded-[50%] bg-white flex justify-center items-center absolute -top-5 -left-5">
+                    <img src="./images/client.png" alt="" class="w-[95%]">
+                </div>
+            </div>
+
+            <!-- client section caerd -->
+            <div class="flex bg-white rounded-md p-5 pl-9 w-[433px] h-[233px] relative opacity-[.4] ">
+                <div class="flex items-center">
+                    <div>
+                        <p class="text-[#777] mb-5">We are providing the best and suitable home insurance services for
+                            the
+                            people
+                            who are interested
+                            to treatment</p>
+                        <h5 class="font-bold mb-2">
+                            Ilham Yuda
+                        </h5>
+                        <p class="text-[#5d5a6f] font-medium">Businessman</p>
+                    </div>
+                </div>
+                <!-- <img src="./images/flowers.png" alt="flowers" class="h-5 self-end">
+                <div
+                    class="circle-pic w-[60px] h-[60px] rounded-[50%] bg-white flex justify-center items-center absolute -top-5 -left-5">
+                    <img src="./images/client.png" alt="" class="w-[95%]">
+                </div> -->
+            </div>
+
+            <!-- client section caerd -->
+            <div class="flex bg-white rounded-md p-5 pl-9 w-[433px] h-[233px] absolute top-[100px] left-3">
+                <div class="flex items-center">
+                    <div>
+                        <p class="text-[#777] mb-5">We are providing the best and suitable home insurance services for
+                            the
+                            people
+                            who are interested
+                            to treatment</p>
+                        <h5 class="font-bold mb-2">
+                            Ilham Yuda
+                        </h5>
+                        <p class="text-[#5d5a6f] font-medium">Businessman</p>
+                    </div>
+                </div>
+                <img src="./images/flowers.png" alt="flowers" class="h-5 self-end">
+                <div
+                    class="circle-pic w-[60px] h-[60px] rounded-[50%] bg-white flex justify-center items-center absolute -top-5 -left-5">
+                    <img src="./images/client.png" alt="" class="w-[95%]">
+                </div>
+            </div>
+        </section>
+
+    </section>
 </body>
 
 </html>
