fix: restore client section image markup

--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
                         <p class="text-[#5d5a6f] font-medium">Businessman</p>
                     </div>
                 </div>
-                <!-- <img src="./images/flowers.png" alt="flowers" class="h-5 self-end">
+                <img src="./images/flowers.png" alt="flowers" class="h-5 self-end">
                 <div
                     class="circle-pic w-[60px] h-[60px] rounded-[50%] bg-white flex justify-center items-center absolute -top-5 -left-5">
                     <img src="./images/client.png" alt="" class="w-[95%]">
-                </div> -->
+                </div>
             </div>
 
             <!-- client section caerd -->
