--- a/index.html
+++ b/index.html
@@ -219,6 +219,142 @@
         </section>
 
     </section>
+
+    <!-- feature products section -->
+    <section class="container  mx-auto space-y-[30px] ">
+        <section class="header text-center space-y-1">
+            <h2 class="font-extrabold text-[45px]">Our Featured Products</h2>
+            <p class="w-[70%] text-center mx-auto font-medium text-[#777]">There are many variations of passages of
+                Lorem Ipsum available, but
+                the
+                majority have
+                suffered alteration
+                in some form,
+                by injected humour, or randomised words which don't look even slightly believable.</p>
+        </section>
+        <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+            <div class="p-4 rounded-md border border-[#d2d2d2] flex flex-col justify-center">
+                <img src="./images/news-1.png" alt="tea-5" class="rounded-md max-auto">
+                <div>
+                    <p class="mb-2.5 mt-5 font-medium text-[#777]">Feb 05, 2027</p>
+                    <h3 class="font-extrabold text-[20px] mb-[17px]">Collecting 8 points for discount</h3>
+                    <p class="font-medium text-[#777] mb-2.5">There are many variations of passages of Lorem Ipsum
+                        available.</p>
+                    <h5 class="font-bold">Learn More</h5>
+                </div>
+
+            </div>
+            <div class="p-4 rounded-md border border-[#d2d2d2] flex flex-col justify-center">
+                <img src="./images/news-2.png" alt="tea-5" class="rounted-md mb-5">
+                <div>
+
+                    <p class="mb-2.5 font-medium text-[#777]">Feb 05, 2027</p>
+                    <h3 class="font-extrabold text-[20px] mb-[17px]">Collecting 8 points for discount</h3>
+                    <p class="font-medium text-[#777] mb-2.5">There are many variations of passages of Lorem Ipsum
+                        available.</p>
+                    <h5 class="font-bold">Learn More</h5>
+                </div>
+
+            </div>
+            <div class="p-4 rounded-md border border-[#d2d2d2] flex flex-col justify-center">
+                <img src="./images/news-3.png" alt="tea-5" class="rounted-md mb-5">
+                <div>
+
+                    <p class="mb-2.5 font-medium text-[#777]">Feb 05, 2027</p>
+                    <h3 class="font-extrabold text-[20px] mb-[17px]">Collecting 8 points for discount</h3>
+                    <p class="font-medium text-[#777] mb-2.5">There are many variations of passages of Lorem Ipsum
+                        available.</p>
+                    <h5 class="font-bold">Learn More</h5>
+                </div>
+
+            </div>
+
+
+        </section>
+    </section>
+
+    <!-- footer section  -->
+    <footer class="py-20 px-10 xl:py-32 xl:px-60 bg-linear-to-r from-[rgba(255,137,56,0.1)] to-[rgba(255,0,0,0.1)] ">
+        <div class="container mx-auto space-y-[50px] lg:space-y-[100px]  flex flex-col">
+
+            <!-- footer header  -->
+            <div class="footer-header flex items-center justify-between">
+                <img src="./images/logo.png" alt="logo" class="mb-5 w-[50px]">
+                <div class="flex gap-10 items-center">
+                    <p class="text-[20px] font-medium text-[#494949]">Ready to get strated?</p>
+                    <button
+                        class="flext items-center py-3 px-5 bg-linear-to-r from-[#ff8938] to-[#f00] rounded-md text-white font-bold text-[20px] border-0 max-sm:mr-0 mr-16">Get
+                        Started</button>
+                </div>
+            </div>
+
+            <!-- footer body  -->
+            <div class="footer_body grid grid-cols-2 lg:grid-cols-4 gap-x-10 gap-y-15">
+
+                <!-- quick links  -->
+                <div class="space-y-[25px] place-items-center lg:place-items-start">
+                    <h4 class="font-semibold text-[20px]">Quick Links</h4>
+                    <div class="space-y-5">
+                        <p class="text-[#494949]">Home</p>
+                        <p class="text-[#494949]">About Us</p>
+                        <p class="text-[#494949]">Insurance</p>
+                        <p class="text-[#494949]">Privacy Policy</p>
+                    </div>
+                </div>
+
+                <!-- services  -->
+                <div class="space-y-[25px] place-items-center lg:place-items-start">
+                    <h4 class="font-semibold text-[20px]">Our Service</h4>
+                    <div class="space-y-5">
+                        <p class="text-[#494949]">Life Insurance</p>
+                        <p class="text-[#494949]">Car Insurance</p>
+                        <p class="text-[#494949]">Health Insurance</p>
+                        <p class="text-[#494949]">House Insurance</p>
+                    </div>
+                </div>
+
+                <!-- help  -->
+                <div class="space-y-[25px] place-items-center lg:place-items-start">
+                    <h4 class="font-semibold text-[20px]">Help</h4>
+                    <div class="space-y-5">
+                        <p class="text-[#494949]">FAQs</p>
+                        <p class="text-[#494949]">Contact Us</p>
+                    </div>
+                </div>
+
+                <!-- newslater  -->
+                <div class="space-y-[25px] place-items-center lg:place-items-start">
+                    <h4 class="font-semibold text-[20px]">Subscribe to our newsletter</h4>
+
+                    <div class="flex justify-between items-center">
+                        <p class="text-[#494949] mr-4 xl:mr-0">Email address</p>
+                        <div
+                            class="flex justify-center items-center bg-linear-to-r from-[#ff8938] to-[#f00] rounded-[50%] w-10 h-10 text-amber-50 ">
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </div>
+
+                    <div class="border border-[#494949] max-w-[90%]"></div>
+
+                </div>
+
+
+            </div>
+
+            <!-- social links  -->
+            <div class="link-icons mr-[100px]  flex gap-5 items-center place-self-end">
+                <i class="fa-brands fa-facebook-f text-[#494949]"></i>
+                <i class="fa-brands fa-twitter text-[#494949]"></i>
+                <i class="fa-brands fa-instagram text-[#494949]"></i>
+                <i class="fa-brands fa-linkedin-in text-[#494949]"></i>
+            </div>
+
+            <small class="font-medium text-[#494949] place-self-center">© 2027 UIDesign.to -
+                All
+                rights
+                reserved.</small>
+        </div>
+    </footer>
 </body>
 
 </html>
