fix: adjust footer section alignment for better responsiveness

--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@
             </div>
 
             <!-- footer body  -->
-            <div class="footer_body grid grid-cols-2 lg:grid-cols-4 gap-x-10 gap-y-15">
+            <div class="footer_body grid grid-cols-2 lg:grid-cols-4 gap-x-10 gap-y-15 lg:text-left text-center">
 
                 <!-- quick links  -->
-                <div class="space-y-[25px] place-items-center lg:place-items-start">
+                <div class="space-y-[25px] ">
                     <h4 class="font-semibold text-[20px]">Quick Links</h4>
                     <div class="space-y-5">
                         <p class="text-[#494949]">Home</p>
@@ -303,7 +303,7 @@
                 </div>
 
                 <!-- services  -->
-                <div class="space-y-[25px] place-items-center lg:place-items-start">
+                <div class="space-y-[25px] ">
                     <h4 class="font-semibold text-[20px]">Our Service</h4>
                     <div class="space-y-5">
                         <p class="text-[#494949]">Life Insurance</p>
@@ -314,7 +314,7 @@
                 </div>
 
                 <!-- help  -->
-                <div class="space-y-[25px] place-items-center lg:place-items-start">
+                <div class="space-y-[25px] ">
                     <h4 class="font-semibold text-[20px]">Help</h4>
                     <div class="space-y-5">
                         <p class="text-[#494949]">FAQs</p>
@@ -323,7 +323,7 @@
                 </div>
 
                 <!-- newslater  -->
-                <div class="space-y-[25px] place-items-center lg:place-items-start">
+                <div class="space-y-[25px] text-left">
                     <h4 class="font-semibold text-[20px]">Subscribe to our newsletter</h4>
 
                     <div class="flex justify-between items-center">
